// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskTree Manage tasks Complete 1`] = `
"  ✔ Task X
  ─ ⚠ Warn 1
  ─ ℹ Log 1"
`;

exports[`TaskTree Manage tasks Fail 1`] = `
"  ✖ Task X [fail]
  ─ ✖ Something bad happened
      at X
      at Y
      at Z
  ─ ⚠ Warn 1
  ─ ℹ Log 1"
`;

exports[`TaskTree Manage tasks Skip 1`] = `
"  ↓ Task X [skip]
  ─ ⚠ Warn 1
  ─ ℹ Log 1"
`;

exports[`TaskTree Render 1`] = `
"  ↓ Task X [skip]
  ─ ⚠ Warn 1
  ─ ℹ Log 1
  ✖ Task X [fail]
  ─ ✖ Something bad happened
      at X
      at Y
      at Z
  ─ ⚠ Warn 1
  ─ ℹ Log 1
  ✔ Task X
  ─ ⚠ Warn 1
  ─ ℹ Log 1"
`;

exports[`TaskTree Render 2`] = `""`;

exports[`TaskTree Render 3`] = `""`;

exports[`TaskTree Tree fail 1`] = `
Array [
  "  [38;2;255;68;68m✖[39m fail A [38;2;131;133;132m[fail][39m",
]
`;

exports[`TaskTree Tree fail 2`] = `
Array [
  "  [38;2;66;133;244m❯[39m Task B",
  "[38;2;131;133;132m  [38;2;46;46;46m›[38;2;131;133;132m [38;2;255;68;68m✖[38;2;131;133;132m fail B [38;2;131;133;132m[fail][38;2;131;133;132m[39m",
]
`;
